<?xml version="1.0"?>
<package>
  <name>hci_cpp</name>
  <version>1.0.0</version>
  <description>Ground control software for McGill Robotics Rover Design Team</description>

  <maintainer email="david.lavoie-boutin@mail.mcgill.ca">David Lavoie-Boutin</maintainer>
  <author email="david.lavoie-boutin@mail.mcgill.ca">David Lavoie-Boutin</author>


  <license>GPLv3</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rover_common</build_depend>
  <build_depend>drive_control</build_depend>
  <build_depend>arm_control</build_depend>
  <build_depend>ahrs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rover_common</run_depend>
  <run_depend>drive_control</run_depend>
  <run_depend>arm_control</run_depend>
  <run_depend>arm_control</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>ahrs</run_depend>


  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
