<?xml version="1.0"?>
<package>
  <name>lidar</name>
  <version>0.0.0</version>
  <description>The lidar package</description>

  <maintainer email="malcolm.watt@mail.mcgill.ca">Malcolm Watt</maintainer>

  <license>GPLv2</license>

  <author email="davidlb.wisevid@gmail.com">David Lavoie-Boutin</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urg_node</build_depend>
  <build_depend>tf2</build_depend>

  <run_depend>urg_node</run_depend>
  <run_depend>tf2_ros</run_depend>

  <export></export>
</package>
