<?xml version="1.0"?>
<package>
  <name>lidar_gazebo</name>
  <version>0.0.1</version>
  <description>The world for lidar sim.</description>

  <maintainer email="malcolm.watt@mail.mcgill.ca">Malcolm Watt</maintainer>
  <author email="malcolm.watt@mail.mcgill.ca">Malcolm Watt</author>

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>lidar_description</build_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>lidar_description</run_depend>

  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <gazebo plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>
</package>
